--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,9 @@
     <div class="main_content">
         {{>header}}
         <img src="/img/me.png" class="portrait">
+        <p class="lb-info"><span>Name:</span> Ly Hien Phuc</p>
+        <p class="lb-info"><span>Birthday:</span> 24/06/1999</p class="lb-info">
+        <p class="lb-info"><span>Nationality:</span> Viet Nam</p class="lb-info">
     </div>
     {{>footer}}
 </body>
